--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -275,7 +275,7 @@ FilterDialog_title = Filters
 
 GeneralPrefPage_body_depcy_tooltip = Enables dependency tracking from function bodies to other functions.\nMay lead to generation of broken migration scripts.
 
-GeneralPrefPage_clean_parser_cache = Clean parser cache
+GeneralPrefPage_clean_parser_cache = Clear parser cache
 
 GeneralPrefPage_enable_body_dependencies = Enable full dependencies from bodies of functions and procedures (experimental)
 
@@ -285,7 +285,7 @@ GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of open
 
 GeneralPrefPage_simplify_view = Simple formatting for VIEWs when reading via JDBC (not recommended by PostgreSQL)
 
-GeneralPrefPage_time_to_clean_parser_cache = Time between cleaning the parser cache after its last use (minutes): 
+GeneralPrefPage_time_to_clean_parser_cache = Free parser cache memory if not used for (minutes):
 
 GetChanges_select_source = Choose source
 
