--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -661,11 +661,19 @@ SQLEditorFormatterPrefPage_add_whitespace_after_operators = Add whitespace after
 
 SQLEditorFormatterPrefPage_add_whitespace_before_operators = Add whitespace before operators
 
+SQLEditorFormatterPrefPage_disable = Disable
+
 SQLEditorFormatterPrefPage_indent_size = Indent size
+
+SQLEditorFormatterPrefPage_indent_type = Indent type
 
 SQLEditorFormatterPrefPage_remove_trailing_whitespace = Remove trailing whitespace
 
 SQLEditorFormatterPrefPage_replace_tab_with_whitespaces = Replace tab with whitespaces
+
+SQLEditorFormatterPrefPage_tab = Tabs
+
+SQLEditorFormatterPrefPage_whitespace = Whitespaces
 
 SQLEditorFormatterPrefPage_whitespace_count = Whitespace count
 
