--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -662,11 +662,19 @@ SQLEditorFormatterPrefPage_add_whitespace_after_operators = \u0414\u043E\u0431\u
 
 SQLEditorFormatterPrefPage_add_whitespace_before_operators = \u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C \u043F\u0440\u043E\u0431\u0435\u043B\u044B \u043F\u0435\u0440\u0435\u0434 \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430\u043C\u0438
 
+SQLEditorFormatterPrefPage_disable = \u041E\u0442\u043A\u043B\u044E\u0447\u0435\u043D
+
 SQLEditorFormatterPrefPage_indent_size = \u0428\u0438\u0440\u0438\u043D\u0430 \u043E\u0442\u0441\u0442\u0443\u043F\u0430
+
+SQLEditorFormatterPrefPage_indent_type = \u0422\u0438\u043F \u043E\u0441\u0442\u0443\u043F\u0430
 
 SQLEditorFormatterPrefPage_remove_trailing_whitespace = \u0423\u0434\u0430\u043B\u044F\u0442\u044C \u043F\u0440\u043E\u0431\u0435\u043B\u044B \u0432 \u043A\u043E\u043D\u0446\u0435 \u0441\u0442\u0440\u043E\u043A\u0438
 
 SQLEditorFormatterPrefPage_replace_tab_with_whitespaces = \u0417\u0430\u043C\u0435\u043D\u044F\u0442\u044C \u0442\u0430\u0431\u0443\u043B\u044F\u0446\u0438\u044E \u043F\u0440\u043E\u0431\u0435\u043B\u0430\u043C\u0438
+
+SQLEditorFormatterPrefPage_tab = \u0422\u0430\u0431\u044B
+
+SQLEditorFormatterPrefPage_whitespace = \u041F\u0440\u043E\u0431\u0435\u043B\u044B
 
 SQLEditorFormatterPrefPage_whitespace_count = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043F\u0440\u043E\u0431\u0435\u043B\u043E\u0432
 
