--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -217,9 +217,11 @@ DiffWizard_db_tz = DB timezone:
 
 DiffWizard_different_types = Incompatible types of original and target schemas (it is impossible to compare MS SQL with PostgreSQL)
 
-DiffWizard_ms_sql_dump = MS SQL dump
+DiffWizard_ms_sql_dump = MS SQL project or dump
 
 DiffWizard_select_db_tz = Please select DB timezone
+
+DiffWizard_show_advanced_options = Show advanced options
 
 DiffWizard_source = Original schema
 
