--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -315,6 +315,10 @@ GitUserReader_error_reading_local_changes = Error reading local changes
 
 HeapSizeCheckerDialog_heap_size_updated = Heap size updated
 
+HeapSizeCheckerDialog_manual_heap_editing = Not enough permission to access the "eclipse.ini". For change the heap size manually you should replace "-Xmx..." by "-Xmx{0}G" in file\n"{1}".\n\nInformation about "eclipse.ini" can be viewed at:\n{2}\n\n
+
+HeapSizeCheckerDialog_manual_heap_editing_title = Manually editing the heap parameter
+
 HeapSizeCheckerDialog_new_heap_size = New heap size
 
 HeapSizeCheckerDialog_restart_offer = You will need to restart Eclipse for the changes to take effect. \nWould you like to restart now?
